# aio-mcp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README_TR.md  package.json  railway.json
.github/workflows/: ci.yml
apps/cli/: package.json
apps/cli/src/: index.ts
apps/desktop/: package.json
apps/desktop/src/: main.ts
apps/web-dashboard/: package.json
apps/web-dashboard/src/: main.ts
core/api-gateway/: Cargo.toml
core/api-gateway/src/: lib.rs
core/configuration-manager/: Cargo.toml
core/configuration-manager/src/: lib.rs
core/engine/: Cargo.toml
core/engine/src/: lib.rs
core/permission-manager/: Cargo.toml
core/permission-manager/src/: lib.rs
core/plugin-manager/: Cargo.toml
core/plugin-manager/src/: lib.rs
docs/architecture/: master-prompt.md  phase-1.md
schemas/manifests/: plugin-manifest.schema.json
scripts/: build.ps1  verify.ps1
server/: Cargo.toml
server/src/: main.rs
