[package]
name = "aio-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "aio-server"
path = "src/main.rs"

[dependencies]
aio-core-engine         = { path = "../core/engine" }
aio-plugin-manager      = { path = "../core/plugin-manager" }
aio-configuration-manager = { path = "../core/configuration-manager" }
aio-permission-manager  = { path = "../core/permission-manager" }
aio-api-gateway         = { path = "../core/api-gateway" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
